# microservices

./: .env.example  Dockerfile  compose.yaml  pyproject.toml  sqlc.yaml  yoyo.ini
config/balancer/: default.conf.template
config/websocket/: config.json
migrations/: 20250504_01_MprBc-initial.sql  20250504_02_Gge5K-adds-data.sql
src/: server.py
src/database/: channel.py  engine.py
src/proxyproto/: proxyproto_pb2.py  proxyproto_pb2_grpc.py
src/queries/: channel.sql
src/rpc/: cetrifugo.py
web/: auth.js  index.html  script.js  styles.css
